src/objects/Special_Event_Booking__c.object
<CustomObject>
    <description>Object to manage bookings to an event</description>
    <fields>
        <fullName>Applicable_Delegate_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This defines the delegate address in the case where it is not the delegate&apos;s principle address.</description>
        <inlineHelpText>Overides delegate principle address for booking address fields</inlineHelpText>
        <label>Applicable Delegate Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>BSC Event Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendance_Notes__c</fullName>
        <defaultValue>&quot;Note - If Partially Attended&quot;</defaultValue>
        <description>Put note when attendee&apos;s attendance is partial on the course.</description>
        <inlineHelpText>Put note when attendee&apos;s attendance is partial on the course.</inlineHelpText>
        <label>Attendance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attendee_Type__c</fullName>
        <description>For the Events Team to determine the type of the attendee</description>
        <inlineHelpText>For the Events Team to determine the type of the attendee</inlineHelpText>
        <label>Attendee Type</label>
        <picklist>
            <picklistValues>
                <fullName>FOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Winner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_places_on_event__c</fullName>
        <formula>Special_Event__r.Available_places__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of available places left on the event that this booking is for.</inlineHelpText>
        <label>Available places on event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticked if the delegate is the person who is receiving the award</description>
        <inlineHelpText>Ticked if the delegate is the person who is receiving the award</inlineHelpText>
        <label>Award Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Address_Address_Area__c</fullName>
        <description>pulls the applicable address area if applicable address is not blank or pulls the area from the contact principle address</description>
        <formula>IF
( ISBLANK( Applicable_Delegate_Address__c ), 
Contact__r.Contact_Principle_Address_Area__c,
Applicable_Delegate_Address__r.Address_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the applicable address area if applicable address is not blank or pulls the area from the contact principle address</inlineHelpText>
        <label>Booking Address Address: Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Address_Building__c</fullName>
        <description>pulls the applicable address building if applicable address is not blank or pulls the building from the contact principle address</description>
        <formula>IF
( ISBLANK(Applicable_Delegate_Address__c), Contact__r.Contact_Principle_Address_Building__c, Applicable_Delegate_Address__r.Address_Building__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the applicable address building if applicable address is not blank or pulls the building from the contact principle address</inlineHelpText>
        <label>Booking Address: Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Address_City__c</fullName>
        <description>pulls the applicable address city if applicable address is not blank or pulls the city from the contact principle address</description>
        <formula>IF
( ISBLANK( Applicable_Delegate_Address__c ), Contact__r.Contact_Principle_Address_City__c, Applicable_Delegate_Address__r.Address_City__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the applicable address city if applicable address is not blank or pulls the city from the contact principle address</inlineHelpText>
        <label>Booking Address: City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Address_Country__c</fullName>
        <description>pulls the applicable address country if applicable address is not blank or pulls the country from the contact principle address</description>
        <formula>IF
( ISBLANK( Applicable_Delegate_Address__c ), 
(Contact__r.Contact_Principle_Address_Country__c), 
TEXT (Applicable_Delegate_Address__r.Address_Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the applicable address country if applicable address is not blank or pulls the country from the contact principle address</inlineHelpText>
        <label>Booking Address: Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Address_State_Province__c</fullName>
        <description>pulls the applicable address state/province if applicable address is not blank or pulls the state/province from the contact principle address</description>
        <formula>IF
( ISBLANK( Applicable_Delegate_Address__c ), Contact__r.Contact_Principle_Address_State_Province__c, Applicable_Delegate_Address__r.Address_State_Province__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the applicable address state/province if applicable address is not blank or pulls the state/province from the contact principle address</inlineHelpText>
        <label>Booking Address: State/ Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Address_Street__c</fullName>
        <description>pulls the applicable address street if applicable address is not blank or pulls the street from the contact principle address</description>
        <formula>IF
( ISBLANK( Applicable_Delegate_Address__c ), Contact__r.Contact_Principle_Address_Street__c, 
  Contact__r.Contact_Principle_Address_Street__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the applicable address street if applicable address is not blank or pulls the street from the contact principle address</inlineHelpText>
        <label>Booking Address: Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Address_ZIP_Postal_Code__c</fullName>
        <description>pulls the applicable address post code if applicable address is not blank or pulls the post code from the contact principle address</description>
        <formula>IF
( ISBLANK( Applicable_Delegate_Address__c ), Contact__r.Contact_Principle_Address_ZIP_Postal__c, Applicable_Delegate_Address__r.Address_ZIP_Postal_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls the applicable address post code if applicable address is not blank or pulls the post code from the contact principle address</inlineHelpText>
        <label>Booking Address: ZIP / Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Fee__c</fullName>
        <description>This is pulled from the opportunity product unit price for public an total price on the in-company primary for in-company</description>
        <inlineHelpText>The amount that should be charged for this booking. This is automatically updated, change this by updating the opportunity line.</inlineHelpText>
        <label>Booking Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CE_Contact_Brithdate__c</fullName>
        <description>Customer entered birth date.</description>
        <inlineHelpText>Customer entered birth date</inlineHelpText>
        <label>CE_Contact_Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CE_Contact_Email__c</fullName>
        <description>Customer Entered email address.</description>
        <inlineHelpText>Customer Entered email address</inlineHelpText>
        <label>CE Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CE_Contact_Name__c</fullName>
        <description>Customer entered contact name</description>
        <inlineHelpText>Customer entered contact name</inlineHelpText>
        <label>CE Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CE_Contact_Phone__c</fullName>
        <description>Customer Entered contact phone number.</description>
        <inlineHelpText>Customer Entered contact phone number</inlineHelpText>
        <label>CE Contact Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Formerlly_Provisonal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System field used to exclude bookings which have been cancelled from a p[provisional status from being invoiced using 1 to 1 invoicing and the old generateinvlice.cls.  This is populated by the cancellation process whenever a booking is cancelled using the new cancellation process</description>
        <inlineHelpText>System field used to exclude bookings which have been cancelled from a p[provisional status from being invoiced using 1 to 1 invoicing and the old generateinvlice.cls.  This is populated by the cancellation process whenever a booking is cancelled using th</inlineHelpText>
        <label>Cancelled Formerlly Provisonal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to the original account booking the event booking.</description>
        <inlineHelpText>Related to the original account booking the event booking</inlineHelpText>
        <label>Booking Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>BSC Event Bookings</relationshipLabel>
        <relationshipName>R00N50000001mIaxEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conga__c</fullName>
        <description>link to conga to open a report (not currently used)</description>
        <formula>HYPERLINK(
(&quot;https://www.appextremes.com/apps/Conga/PointMerge.aspx?SessionID=&quot;
+$Api.Session_ID
+&quot;&amp;ServerURL=&quot;+$Api.Partner_Server_URL_80 
+&quot;&amp;Id=&quot;+Id
+&quot;&amp;ReportID=00O20000003m7Th?pv0= &quot;+Special_Event__c 
+&quot;,00O20000003m2dh?pv0=&quot;+$User.Id 
+&quot;,00O20000003m2Qs?pv0=&quot;+Opportunity_ID__c  
+&quot;,00O20000003mElO?pv0=&quot;
+&quot;,00O20000003mBx6?pv0=&quot;),&quot;Conga&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>link to conga to open a report</inlineHelpText>
        <label>Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>Pulls in the related contact ID</description>
        <formula>Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related contact ID</inlineHelpText>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>Pulls in the related contact&apos;s last name, this is used on the Delegate Badges only so doesn&apos;t appear on the page layouts</description>
        <formula>Contact__r.LastName</formula>
        <inlineHelpText>Pulls in the related contact&apos;s last name, this is used on the Delegate Badges only so doesn&apos;t appear on the page layouts</inlineHelpText>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <description>Pulls in the related Contact Salutation</description>
        <formula>TEXT(Contact__r.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related Contact Salutation</inlineHelpText>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The name of the person attending the event as a delegate pulled from the contact</description>
        <inlineHelpText>The name of the person attending the event as a delegate</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BSC Event Bookings</relationshipLabel>
        <relationshipName>BSC_Event_Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Notes_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by flow used to send email to primary booker which is driven by a workflow</description>
        <label>Course Notes Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credited_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticked if the related invoice has been credited</description>
        <inlineHelpText>Ticked if the related invoice has been credited</inlineHelpText>
        <label>Credited Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Cancellation_Transfer_Date__c</fullName>
        <description>The date and time on which the customer asked for the transfer or cancellation.</description>
        <inlineHelpText>The date and time on which the customer asked for the transfer or cancellation.</inlineHelpText>
        <label>Customer Cancellation/Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether to charge a customer for a public booking transfer. Auto populated when transferring a public booking.</description>
        <inlineHelpText>Tick this box if the client should incur transfer fees!</inlineHelpText>
        <label>Customer Requested Transfer Apply Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegate_Account_ID__c</fullName>
        <description>Driven by Workflow - generate delegate account id - to populate booking delegate&apos;s account ID used to filter address search</description>
        <inlineHelpText>Pulls in the related contact account&apos;s ID</inlineHelpText>
        <label>Delegate Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_DOB__c</fullName>
        <description>Pulls in the related contact&apos;s date of birth</description>
        <formula>Contact__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related contact&apos;s date of birth</inlineHelpText>
        <label>Delegate DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegate_Days__c</fullName>
        <description>Formula to count the number of days the delegate is booked on to (includes any gaps and weekends though)</description>
        <formula>Special_Event__r.EndDate__c - Special_Event__r.StartDate__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days - note: inaccurate for courses spanning several weeks!</inlineHelpText>
        <label>Delegate Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delegate_Email__c</fullName>
        <description>Pulls in the email of the related delegate created to add to the trainers event booking related list layout on the BSC Event page</description>
        <formula>Contact__r.Email</formula>
        <inlineHelpText>The email of the related delegate created to add to the trainers event booking related list layout on the BSC Event page</inlineHelpText>
        <label>Delegate Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Job_Title__c</fullName>
        <description>Pulls in the related contact&apos;s job title</description>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related contact&apos;s job title</inlineHelpText>
        <label>Delegate Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Mobile__c</fullName>
        <description>Pulls in the mobile of the related delegate created to add to the trainers event booking related list layout on the BSC Event page</description>
        <formula>Contact__r.MobilePhone</formula>
        <inlineHelpText>The mobile of the related delegate created to add to the trainers event booking related list layout on the BSC Event page</inlineHelpText>
        <label>Delegate Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Notes__c</fullName>
        <description>Any notes that could be relevant to the delegate</description>
        <inlineHelpText>Any notes that could be relevant to the delegate</inlineHelpText>
        <label>Delegate Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Delegate_Work_Phone__c</fullName>
        <description>Pulls in the work phone of the related delegate created to add to the trainers event booking related list layout on the BSC Event page</description>
        <formula>Contact__r.Work_Phone__c</formula>
        <inlineHelpText>The work phone of the related delegate created to add to the trainers event booking related list layout on the BSC Event page</inlineHelpText>
        <label>Delegate Work Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dietary_Requirements__c</fullName>
        <description>Used for the Events Team to distinguish any special dietary requirements of the delegates</description>
        <inlineHelpText>Used for the Events Team to distinguish any special dietary requirements of the delegates</inlineHelpText>
        <label>Dietary Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dont_Show_on_Booking_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables this event booking from appearing on the booking form.</description>
        <inlineHelpText>Disables this event booking from appearing on the booking form.</inlineHelpText>
        <label>Don&apos;t Show on Booking Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Certificate_Course_Name__c</fullName>
        <description>Shows the Event.Certificate Course Name and is used to pull information into drawloop document</description>
        <formula>Special_Event__r.Certificate_Course_Name__c</formula>
        <inlineHelpText>Shows the Event.Certificate Course Name and is used to pull information into drawloop document</inlineHelpText>
        <label>Event Certificate Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_City__c</fullName>
        <description>Pulls in the related event&apos;s city</description>
        <formula>TEXT (Special_Event__r.City__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related event&apos;s city</inlineHelpText>
        <label>Event City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <description>Pulls in the related event&apos;s start date</description>
        <formula>Special_Event__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related event&apos;s start date</inlineHelpText>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <formula>Special_Event__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Venue_City__c</fullName>
        <description>Used for drawloop templates (not on page layouts)</description>
        <formula>Special_Event__r.Venue__r.Principle_Address_City__c</formula>
        <label>Event Venue City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <description>Used in Drawloop to populate venue name on automated booking confirmation</description>
        <formula>Special_Event__r.Venue__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Populated automatically from related event</inlineHelpText>
        <label>Event Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_end_Date__c</fullName>
        <description>Pulls in the related event&apos;s end date</description>
        <formula>Special_Event__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related event&apos;s end date</inlineHelpText>
        <label>Event end Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FK_CB_BOOK_ID__c</fullName>
        <description>This is a Foreign Key which maps to the Opportunities table in Salesforce from each BSC Event Booking via Oppotunitiy.PK_CB_BOOK_ID__c

It is used during migration to associate BSC Event Bookings to Opportunities (Bookings)</description>
        <inlineHelpText>This is a System Administrator field</inlineHelpText>
        <label>FK_CB_BOOK_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FK_CB_COURSE_ID__c</fullName>
        <description>This is a Foreign Key which maps to the BSC Events table in Salesforce from each BSC Event Booking via BSC_Event__c.PK_CB_COURSE_ID__c

It is used during migration to associate BSC Event Bookings (Elements) to BSC Events (Courses)</description>
        <inlineHelpText>This is a System Administrator field</inlineHelpText>
        <label>FK_CB_ COURSE_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FK_CB_ORG_ID__c</fullName>
        <description>This is a Foreign Key which maps to the Accounts table in Salesforce from each BSC Event Booking via Account.PK_CB_ORG_ID__c

It is used during migration to associate BSC Event Bookings to Accounts (Organisations)</description>
        <inlineHelpText>used as part of the migration from course booker to link the event booking to the correct account</inlineHelpText>
        <label>FK_CB_ ORG_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FK_CB_PN_ID__c</fullName>
        <description>This is a Foreign Key which maps to the Contact table in Salesforce from each BSC Event Booking via Contact.PK_CB_PN_ID__c

It is used during migration to associate BSC Event Bookings to Copntacts (Person)</description>
        <inlineHelpText>used as part of the migration from course booker to link the event booking to the correct contact</inlineHelpText>
        <label>FK_CB_PN_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Date__c</fullName>
        <description>Updates to the Transfer cancellation date or if this is blank pulls in the event start date</description>
        <formula>IF( ISBLANK(Transfer_Cancellation_Date__c ), Special_Event__r.StartDate__c ,Transfer_Cancellation_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the date on which revenues can be realised (i.e. event date for normal bookings and transfer / cancellation date for transfers / cancellations)</inlineHelpText>
        <label>Fee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Type__c</fullName>
        <description>if the status is transferred or cancelled, updates to either Transfer Fee or Cancellation Fee else updates to booking fee</description>
        <formula>IF(
	ISPICKVAL(Status__c,&quot;Transferred&quot;),
	&quot;Transfer Fee&quot;,
		IF(
			ISPICKVAL(Status__c, &quot;Cancelled&quot;),
			&quot;Cancellation Fee&quot;,
			&quot;Booking Fee&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if the status is transferred or cancelled, updates to either Transfer Fee or Cancellation Fee else updates to booking fee</inlineHelpText>
        <label>Fee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>When related to an invoice, adds in the related invoice date</description>
        <inlineHelpText>When related to an invoice, adds in the related invoice date</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Paid_Date__c</fullName>
        <description>When related to an invoice, adds in the related invoice paid date</description>
        <inlineHelpText>When related to an invoice, adds in the related invoice paid date</inlineHelpText>
        <label>Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <description>When related to an invoice, adds in the related invoice status</description>
        <inlineHelpText>When related to an invoice, adds in the related invoice status</inlineHelpText>
        <label>Invoice Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not-Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Joining_Instructions_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joining Instructions Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOOP_Booking_Confirmation_Short_Name__c</fullName>
        <formula>Special_Event__r.Product__r.LOOP_Booking_Confirmation_Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOOP Booking Confirmation Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_Confirmed_Bkgs__c</fullName>
        <description>Used to populate in company training template with the number of event confirmed bookings, Auto popluated from related contact used in Drawloop booking confirmation DDPs. This can only be used for in company training templates.</description>
        <formula>Special_Event__r.No_of_Delegates_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not shown on any page layout</inlineHelpText>
        <label>LOOP Confirmed Bkgs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOOP_Delegate_Name__c</fullName>
        <description>Auto popluated from related contact used in Drawloop booking confirmation DDPs</description>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto popluated from related contact used in Drawloop booking confirmation DDPs</inlineHelpText>
        <label>LOOP Delegate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_Event_End_Date__c</fullName>
        <formula>TEXT(DAY(Special_Event__r.EndDate__c )) + &apos; &apos; +
CASE(MONTH(Special_Event__r.EndDate__c ),
1, &apos;January&apos;,
2, &apos;February&apos;,
3, &apos;March&apos;,
4, &apos;April&apos;,
5, &apos;May&apos;,
6, &apos;June&apos;,
7, &apos;July&apos;,
8, &apos;August&apos;,
9, &apos;September&apos;,
10, &apos;October&apos;,
11, &apos;November&apos;,
12, &apos;December&apos;,
NULL) + &apos; &apos; +
TEXT(YEAR(Special_Event__r.EndDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOOP_Event_End_Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_Event_Product__c</fullName>
        <description>Pulls Product from event, used in Drawloop booking confirmation DDPs</description>
        <formula>Special_Event__r.Certificate_Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls Product from event, used in Drawloop booking confirmation DDPs</inlineHelpText>
        <label>LOOP Event Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_Event_Stage__c</fullName>
        <description>Used by drawloop to filter event stage for automated document creation (booking confirmation)</description>
        <formula>TEXT(Special_Event__r.Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto populated from related event. Used in Drawloop booking confirmation DDPs</inlineHelpText>
        <label>LOOP Event Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_Event_Start_Date__c</fullName>
        <formula>TEXT(DAY(Special_Event__r.StartDate__c )) + &apos; &apos; +
CASE(MONTH(Special_Event__r.StartDate__c ), 
1, &apos;January&apos;, 
2, &apos;February&apos;, 
3, &apos;March&apos;,
4, &apos;April&apos;,
5, &apos;May&apos;,
6, &apos;June&apos;,
7, &apos;July&apos;,
8, &apos;August&apos;,
9, &apos;September&apos;,
10, &apos;October&apos;,
11, &apos;November&apos;,
12, &apos;December&apos;,
NULL) + &apos; &apos; +
TEXT(YEAR(Special_Event__r.StartDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOOP_Event_Start_Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_LRA_Available__c</fullName>
        <description>Used by Drawloop to populate product web link in automated forms (booking confirmation)</description>
        <formula>IF( Special_Event__r.Product__r.LOOP_Learner_Resource_Area__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto popluated from related product. Website link to product information. Used in Drawloop booking confirmation DDPs</inlineHelpText>
        <label>LOOP LRA Available</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOOP_Product_Web_Link__c</fullName>
        <description>Used by Drawloop to populate product web link in automated forms (booking confirmation)</description>
        <formula>Special_Event__r.Product__r.Website_Product_Information__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto popluated from related product. Website link to product information. Used in Drawloop booking confirmation DDPs</inlineHelpText>
        <label>LOOP Product Web Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learner_Resource_Access__c</fullName>
        <formula>Opportunity__r.Learner_Resource_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Learner Resource Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migrated_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the BSC Event Booking data was migrated from the Course Booker database</description>
        <inlineHelpText>Indicates whether the BSC Event Booking data was migrated from the Course Booker database</inlineHelpText>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPL_ID__c</fullName>
        <description>18 digit opportunity product line id that the event booking relates to</description>
        <externalId>true</externalId>
        <inlineHelpText>18 digit opportunity product line id that the event booking relates to</inlineHelpText>
        <label>OPL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <description>Pulls in the related opportunity close date</description>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related opportunity close date</inlineHelpText>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_ID__c</fullName>
        <description>Pulls in the related opportunity ID</description>
        <formula>Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related opportunity ID</inlineHelpText>
        <label>Opp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>NOTE: Formula references Opportunity Number not ID - used for In-Company Booking creation</description>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Number</inlineHelpText>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
</CustomObject>